# rubicon

./: .gitignore  Makefile  README.md  pyproject.toml
js/: auto-move-override.js
scripts/: get_chromedriver.sh
src/: play_rubicon.py
src/utils/: __init__.py  browser_utils.py  helpers.py  policies.py
