[tool.poetry]
name = "rubicon"
version = "0.1.0"
description = "A repo of code used to play the Rubicon game"
authors = ["Michael Hood <hoodmichaelallen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.3"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
(
  /(
    | \.git
    | build
    | deploy
    | dist
    | \.venv
    | .*\/proto
  )/
)
'''
